# twitch-plasmoid

./: .gitignore  CMakeLists.txt  README  README.md
icons/: CMakeLists.txt
pkg/archlinux/: PKGBUILD
plasmoid/: metadata.desktop
plasmoid/contents/ui/: MainPage.qml  Settings.qml  main.qml
plugin/: CMakeLists.txt  apitest.cpp  apitest.h  channelmodel.cpp  channelmodel.h  client.cpp  client.h  data.cpp  data.h  definitions.h  plugin.cpp  plugin.h  qmldir  settings.cpp  settings.h  twitchPlasmoid.notifyrc
